--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ But it must have the following features:
   </head>
   <body>
     <div>
-      <img src="./65c2471e89393489a0c607f0888b678d.jpg" alt="GOT" width="100%" >
+      <img src="./65c2471e89393489a0c607f0888b678d.jpg" alt="GOT" width="100%" height="100%" >
       
       
       <h1>Iron man</h1>
